add_subdirectory(ACTUATOR)
add_subdirectory(COMPUTE)
add_subdirectory(CONFIG_SETTINGS)
add_subdirectory(CYCLES)
add_subdirectory(DATABASE)
add_subdirectory(DATABASE_SETTINGS)


add_subdirectory(GENERAL)


add_subdirectory(PRES_SETTINGS)
add_subdirectory(PSIMV_SETTINGS)
add_subdirectory(PSV_SETTINGS)
add_subdirectory(SCHEDULER)
#add_subdirectory(SECURITY)
add_subdirectory(SET_UP)
#add_subdirectory(SYSTEM)
add_subdirectory(TIMERS)
add_subdirectory(USB_SETTINGS)
add_subdirectory(VENTILATION)
add_subdirectory(VOL_SETTINGS)
#add_subdirectory(VSIMV_SETTINGS)
